# guinea-pig-race

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  nginx-app.conf  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tailwind.sh  test.sql
main_site/: admin.py  context_processors.py  helpers.py  models.py  urls.py  views.py
main_site/components/nav/: nav_item.html  nav_item.py
main_site/management/commands/: seed.py
main_site/migrations/: 0001_initial.py  0002_alter_registrant_date_of_birth.py  0002_registrant_hometown.py  0003_remove_result_placement_fields.py  0004_alter_registrant_date_of_birth_alter_registrant_year_and_more.py
main_site/static/src/: index.js  main.css
main_site/templates/: base.html
main_site/templates/about/: index.html
main_site/templates/admin/: email_registrants.html  export_registrants.html
main_site/templates/auxiliary/: bottom_track.html  flames.html  hero_image.html  image_carousel.html  mobile_nav.html  nav_items.html  results_container.html  results_section.html  social_links.html  top_nav.html
main_site/templates/awards/: index.html
main_site/templates/email/: index.html
main_site/templates/home/: bottom_track.html  flames.html  image.html  index.html  mobile_nav.html  navbar.html  results_highlight.html  results_section.html  top_nav.html  welcome_blurb.html
race_site/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: build_static.sh  docker-dev.sh  init_db.sh  restart_prod.sh  start.sh
skills/agent-browser/: SKILL.md
(+9 files in other folders)
