[project]
name = "guinea-pig-race"
version = "0.1.0"
description = ""
authors = [
    {name = "Ethan Weiner",email = "ethanweiner20@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django",
    "django-components",
    "gunicorn",
    "python-dotenv",
    "pytailwindcss"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false