[tool.poetry]
name = "guinea-pig-race"
version = "0.1.0"
description = ""
authors = ["Ethan Weiner <ethanweiner20@gmail.com>"]
readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "*"
django-components = "*"
python-dotenv = "*"
pytailwindcss = "*"
gunicorn = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"